<resources>
    <string name="app_name">Culinary Companion</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="search_recipes">Search recipes</string>
    <string name="delete">Delete </string>
    <string name="edit">Edit </string>
    <string name="recipe_image">Recipe image </string>
    <string name="are_you_sure_you_want_to_delete_this">Are you sure you want to delete this?</string>
    <string name="yes">Yes</string>
    <string name="no_thanks">No, thanks</string>
    <string name="select_image">Select Image</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="list_of_ingredients">List of ingredients</string>
    <string name="cooking_instructions">Cooking instructions</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_mock_recipes">Add Mock Recipes</string>
    <string name="culinary_companion">Culinary Companion</string>
    <string name="edit_recipe" />
    <string name="delete_recipe" />
    <string name="list_of_ingredients_n_eggs_n_flour">List of ingredients:\n- Eggs\n- Flour</string>
    <string name="confirm_delete_message">Are you sure you want to delete this?</string>
    <string name="category_breakfast">Category: Breakfast</string>
    <string name="search">Search...</string>
</resources>