<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/culinary_companion"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp" />

        <ImageView
            android:id="@+id/recipeImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/placeholder_image"
            android:scaleType="centerCrop"
            android:background="#CCCCCC"
            android:contentDescription="@string/recipe_image"
            android:layout_marginBottom="16dp" />


        <Spinner
            android:id="@+id/imageSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />


        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/recipeTitleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_title"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/ingredientsInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/list_of_ingredients"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/instructionsInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cooking_instructions"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:layout_marginBottom="24dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/saveButton"
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp" />

            <Button
                android:id="@+id/cancelButton"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
